turnkey-etherpad-14.2 (1) turnkey; urgency=low

  * Updated Etherpad to latest upstream version

  * Dummy message

 -- Stefan Davis <stefan@turnkeylinux.org>  Fri, 02 Jun 2017 07:28:48 +1000

turnkey-etherpad-14.1 (1) turnkey; urgency=low

  * Etherpad:

    - Latest upstream version of Etherpad.
    - Now uses common tools to manage NodeJS (n, pm2 etc).

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Anton Pyrogovskyi <anton@turnkeylinux.org>  Sun, 15 Jan 2016 12:04:16 +0100

turnkey-etherpad-14.0 (1) turnkey; urgency=low

  * Etherpad:

    - Latest upstream versions of Etherpad and NodeJS.
    - Generate/update SESSIONKEY in addition to APIKEY automatically.

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Anton Pyrogovskyi <q@dae.pp.ua>  Sun, 17 May 2015 09:18:07 +0300

turnkey-etherpad-13.0 (1) turnkey; urgency=low

  * Etherpad:

    - Latest upstream versions of Etherpad and NodeJS.
    - Bugfix: create src/.ep_initialized [#44].

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Alon Swartz <alon@turnkeylinux.org>  Thu, 10 Oct 2013 17:51:16 +0300

turnkey-etherpad-12.1 (1) turnkey; urgency=low

  * Etherpad:

    - Latest version of Etherpad will be installed at build time via git.
    - Changed path to /opt/etherpad-lite (inline with git project name).
    - Dependencies will be installed via included installDeps.sh script.

  * NodeJS related:

    - Latest version of node will be installed at build time, with a source
      symlink created at /usr/local/src/node.
    - Node binaries added to path via symlinking in /usr/local/bin.
    - Latest NPM module versions installed at build time.
