@@ -1,54 +1,0 @@
-#!/usr/bin/python
-"""Set Etherpad admin password
-
-Option:
-    --pass=     unless provided, will ask interactively
-
-"""
-
-from os import system
-import sys
-import getopt
-import string
-import json
-
-from dialog_wrapper import Dialog
-
-def usage(s=None):
-    if s:
-        print >> sys.stderr, "Error:", s
-    print >> sys.stderr, "Syntax: %s [options]" % sys.argv[0]
-    print >> sys.stderr, __doc__
-    sys.exit(1)
-
-def main():
-    try:
-        opts, args = getopt.gnu_getopt(sys.argv[1:], "h",
-                                       ['help', 'pass='])
-    except getopt.GetoptError, e:
-        usage(e)
-
-    password = ""
-    for opt, val in opts:
-        if opt in ('-h', '--help'):
-            usage()
-        elif opt == '--pass':
-            password = val
-
-    if not password:
-        d = Dialog('TurnKey Linux - First boot configuration')
-        password = d.get_password(
-            "Etherpad Password",
-            "Enter new password for the Etherpad 'admin' account.")
-
-    with open('/opt/etherpad-lite/settings.json') as fob:
-        settings = json.load(fob)
-
-    settings['users']['admin']['password'] = password    
-
-    with open('/opt/etherpad-lite/settings.json', 'w') as fob:
-        json.dump(settings, fob)
-
-if __name__ == "__main__":
-    main()
-
