@@ -1,8 +1,18 @@
 turnkey-etherpad-14.2 (1) turnkey; urgency=low
 
-  * Updated Etherpad to latest upstream version
+  * Updated Etherpad to latest upstream version.
 
-  * Dummy message
+  * Replaced etherpad inithook with etherpad-admin, due to issue #813.
+
+  * Replaced pm2 with both a systemd unit file and a sysvinit script for
+    starting/stopping etherpad.
+
+  * Provides NodeJS 6.11.0 LTS.
+
+  * Installed security updates.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
 
  -- Stefan Davis <stefan@turnkeylinux.org>  Fri, 02 Jun 2017 07:28:48 +1000
 
